--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -3,7 +3,7 @@
 {%- endif -%}
 
 
-<h2>贡献者</h2>
+<h2>仓库贡献者列表</h2>
 
 <ul class="list-style-none">
   {% for contributor in site.github.contributors %}
